update base url

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 #ENDPONT API
-REACT_APP_ENDPOINT_URL=https://dev1-retail-api.equix.app
+REACT_APP_ENDPOINT_URL=https://iress-wealth-dev-api.equix.app/cms
