--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:dev": "env-cmd -f .env.development react-scripts build",
+    "build:dev": "chmod +x ./build.sh && ./build.sh && env-cmd -f .env.development react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .ts,.tsx src --color",
