--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "^22.4.1",
     "i18next-browser-languagedetector": "^7.0.1",
     "moment": "^2.29.4",
@@ -29,6 +32,7 @@
     "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^12.1.1",
     "react-native-crypto-js": "^1.0.0",
@@ -80,7 +84,11 @@
   "devDependencies": {
     "@types/auth0-js": "^9.14.7",
     "@types/autosuggest-highlight": "^3.2.0",
+    "@types/draft-js": "^0.11.10",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/lodash": "^4.14.191",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-native-crypto-js": "^1.0.0",
     "@types/react-portal": "^4.0.4",
     "@types/react-redux": "^7.1.24",
