--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ REACT_APP_THEME=dark
 REACT_APP_LANGUAGE=en
 REACT_APP_DELAY_GET_DATA=300
 REACT_APP_DEBOUNCE_TIME=500
+REACT_APP_REFRESH_TOKEN_TIME=900000
 REACT_APP_MAX_SNACKBAR=3
 REACT_APP_DEFAULT_PAGE_SIZE=25
 REACT_APP_DEFAULT_VALUE=--
