--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next": "^22.4.1",
     "i18next-browser-languagedetector": "^7.0.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "mui-datatables": "^4.2.2",
     "notistack": "^2.0.8",
     "react": "18.2.0",
