--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/deep-diff": "^1.0.2",
     "@types/jest": "^29.2.4",
     "@types/mui-datatables": "^3.7.9",
     "@types/node": "^18.11.13",
@@ -22,6 +23,7 @@
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
+    "deep-diff": "^1.0.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "env-cmd": "^10.1.0",
