--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mui-datatables": "^4.2.2",
     "notistack": "^2.0.8",
     "react": "18.2.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-error-boundary": "^3.1.4",
