--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,35 @@
 {
   "projects": {
     "default": "iress-wealth-management-dev"
+  },
+  "hosting": {
+    "appAssociation": "AUTO",
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "X-Frame-Options",
+            "value": "sameorigin"
+          }
+        ]
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/dynamic/**",
+        "dynamicLinks": true
+      },
+      {
+        "source": "/share/**",
+        "dynamicLinks": true
+      }
+    ]
   }
 }
