--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
     "react/jsx-curly-newline": "off",
     "no-underscore-dangle": "off",
     "no-param-reassign": "off",
-    "no-unused-vars": "off",
+    "no-unused-vars": "warn",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "@typescript-eslint/no-explicit-any": "off",
