add no cache firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,10 @@
           {
             "key": "X-Frame-Options",
             "value": "sameorigin"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
