--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 GENERATE_SOURCEMAP=false
 
 #ENDPONT API
-REACT_APP_ENDPOINT_URL=https://dev1-retail-api.equix.app
+REACT_APP_ENDPOINT_URL=https://dev1-retail-prod.equix.app
