feat: newlogin flow by Xplan &  Portfolio performance indicator

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 #ENDPONT API
 REACT_APP_ENDPOINT_URL=https://iress-wealth-dev-api.equix.app/cms
+REACT_APP_REDIRECT_URL=https://iress-wealth-dev.equix.app/login
