--- a/.env.uat
+++ b/.env.uat
@@ -3,3 +3,5 @@ GENERATE_SOURCEMAP=false
 
 #ENDPONT API
 REACT_APP_ENDPOINT_URL=https://iress-wealth-uat-api.equix.app/cms
+#REDIRECT URL LOGIN
+REACT_APP_REDIRECT_URL=https://iress-wealth-uat.equix.app/login
