--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
@@ -53,6 +54,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.1.0",
     "yup": "^0.32.11"
   },
