--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 #ENDPONT API
 REACT_APP_ENDPOINT_URL=https://iress-wealth-dev-api.equix.app/cms
 REACT_APP_REDIRECT_URL=https://iress-wealth-dev.equix.app/login
+REACT_APP_BASE_URL=https://iress-wealth-dev.equix.app
