--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ GENERATE_SOURCEMAP=false
 
 #ENDPONT API
 REACT_APP_ENDPOINT_URL=https://iress-wealth-prod-api.equix.app/cms
+REACT_APP_BASE_URL=https://iress-wealth-prod-api.equix.app
