updsate structure and get dynamic config from aws

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/deep-diff": "^1.0.2",
     "@types/jest": "^29.2.4",
     "@types/mui-datatables": "^3.7.9",
@@ -38,6 +39,7 @@
     "@types/uuid": "^9.0.1",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "deep-diff": "^1.0.2",
     "draft-js": "^0.11.7",
@@ -57,7 +59,6 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^12.1.1",
-    "react-native-crypto-js": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
@@ -99,7 +100,6 @@
     "@types/html-to-draftjs": "^1.4.0",
     "@types/lodash": "^4.14.191",
     "@types/react-draft-wysiwyg": "^1.13.4",
-    "@types/react-native-crypto-js": "^1.0.0",
     "@types/react-portal": "^4.0.4",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
