add client id for uat

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@
 REACT_APP_ENDPOINT_URL=https://iress-wealth-dev-api.equix.app/cms
 REACT_APP_REDIRECT_URL=https://iress-wealth-dev.equix.app/login
 REACT_APP_BASE_URL=https://iress-wealth-dev.equix.app
+REACT_APP_CLIENT_ID=swq7xlOvB8qD4iPqxpNn
