--- a/.env.uat
+++ b/.env.uat
@@ -7,3 +7,4 @@ REACT_APP_ENDPOINT_URL=https://iress-wealth-uat-api.equix.app/cms
 REACT_APP_REDIRECT_URL=https://iress-wealth-uat.equix.app/login
 #BASE URL
 REACT_APP_BASE_URL=https://iress-wealth-uat.equix.app
+REACT_APP_CLIENT_ID=AgvWIjPfZIPDnyC3SG8p
