--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon index.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,8 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
   }
 }
