--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "prettier": "^2.8.8",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3"
   }
