--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.1",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
