--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "webpack-dev-server": "^4.15.0"
   }
 }
