--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.85.1",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.3",
     "webpack-dev-server": "^4.15.0"
   }
